<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_login_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/background_dark">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/layout_rounder_cornes"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_cda_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_sign_in_title"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/edittext_sign_in_phone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_edittext_hint_phone"
                android:layout_margin="2dp"
                android:background="@drawable/edittext_rounder_cornes"/>

            <EditText
                android:id="@+id/edittext_login_phone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_edittext_hint_password"
                android:inputType="textPassword"
                android:layout_margin="2dp"
                android:background="@drawable/edittext_rounder_cornes"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_login"
                android:background="@drawable/edittext_rounder_cornes"/>

        </LinearLayout>
    </LinearLayout>