<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/layout_rounder_cornes"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="75dip"
                android:src="@drawable/logo_white" />

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="CONCIENCIA DE"-->
                <!--android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="ABUNDANCIA"-->
                <!--android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"-->
                <!--android:textSize="24dip"-->
                <!--android:textStyle="bold" />-->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_sign_up_title"
                android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:text="@string/login_edittext_hint_name"
                android:layout_gravity="left"/>

            <EditText
                android:id="@+id/edittext_sign_up_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/edittext_rounder_cornes"
                android:hint="@string/login_edittext_hint_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:text="@string/login_edittext_hint_last_name"
                android:layout_gravity="left"/>

            <EditText
                android:id="@+id/edittext_sign_up_lastname"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/edittext_rounder_cornes"
                android:hint="@string/login_edittext_hint_last_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:text="@string/login_edittext_hint_location"
                android:layout_gravity="left"/>

            <ViewSwitcher
                android:id="@+id/view_switcher_sign_up_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="true" />

                <Spinner
                    android:id="@+id/spinner_sign_up_location"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"></Spinner>


            </ViewSwitcher>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:text="@string/login_edittext_hint_phone"
                android:layout_gravity="left"/>

            <EditText
                android:id="@+id/edittext_sign_up_phone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/edittext_rounder_cornes"
                android:hint="@string/login_edittext_hint_phone"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:text="@string/login_edittext_hint_email"
                android:layout_gravity="left"/>

            <EditText
                android:id="@+id/edittext_sign_up_mail"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/edittext_rounder_cornes"
                android:hint="@string/login_edittext_hint_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:text="@string/login_edittext_hint_password"
                android:layout_gravity="left"/>

            <EditText
                android:id="@+id/edittext_sign_up_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/edittext_rounder_cornes"
                android:hint="@string/login_edittext_hint_password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:text="@string/login_edittext_hint_repassword"
                android:layout_gravity="left"/>

            <EditText
                android:id="@+id/edittext_sign_up_repassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/edittext_rounder_cornes"
                android:hint="@string/login_edittext_hint_repassword"
                android:inputType="textPassword" />

            <ViewSwitcher
                android:id="@+id/view_switcher_sign_up_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_sign_up_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_gravity="center"
                    android:text="@string/login_button_register" />

                <ProgressBar
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:layout_gravity="center"
                    android:indeterminate="true"/>

            </ViewSwitcher>
        </LinearLayout>
    </ScrollView>
</FrameLayout>